# Neurolink-v1

./: .env.example  .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  compose.dev.yml  compose.prod.yml  conftest.py  neurolink_spec.md  pytest.ini
.github/workflows/: ci.yml
backend/: .coverage  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_session_log.py  0001_create_session_logs.py
backend/src/neurolink/: __init__.py  adapter_factory.py  ble_bridge.py  calibration.py  config.py  dependencies.py  ea1_scorer.py  eeg_pump.py  exceptions.py  fatigue.py  focus_state.py  hub.py  logging_config.py  main.py  service.py
backend/src/neurolink/cache/: redis_client.py
backend/src/neurolink/db/: engine.py  models.py  repository.py
backend/src/neurolink/dsp/: artifact_config.py  artifact_detector.py  artifact_gate.py  asr.py  bad_channels.py  bandpower.py  baseline.py  breathing.py  cardiac_regression.py  classifiers.py  decoders.py  derived_eeg.py  filter_toggles.py  fnirs.py  imu.py  ocular_regression.py  online_filter.py  pipeline.py  ppg.py  spherical_spline.py
backend/src/neurolink/hardware/: base.py  mock.py
backend/src/neurolink/hardware/muse_athena/: ble_adapter.py  compute.py  fnirs.py
backend/src/neurolink/hardware/muse_s/: ble_adapter.py  compute.py  lsl_adapter.py
backend/src/neurolink/models/: eeg.py  session.py
backend/src/neurolink/routers/: __init__.py  ble.py  calibration.py  eeg_gate.py  filters.py  health.py  neurolink.py  stage0.py  stage1.py  stage2.py  stage3.py  stage3b.py
backend/src/neurolink/stage0/: __init__.py  impedance.py  imu_gate.py
backend/src/neurolink/utils/: timing.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_baseline_progress.py  test_api_calibration.py  test_api_health.py  test_api_neurolink.py  test_health.py  test_hub_pipeline.py  test_hub_reset_baseline.py  test_mock_adapter.py  test_neurolink_router.py  test_session_log.py  test_sse_stream.py
backend/tests/unit/: test_adapter_factory.py  test_adapter_mock_coverage.py  test_artifact_config.py  test_artifact_detector.py  test_artifact_gate.py  test_asr.py  test_bad_channels.py  test_band_powers.py  test_bandpower.py  test_baseline.py  test_ble_adapter_mock.py  test_ble_backoff.py  test_ble_bridge.py  test_ble_bridge_supervisor.py  test_branch_coverage.py  test_breathing.py  test_calibration.py  test_calibration_coverage.py  test_calibration_session_extended.py  test_cardiac_regression.py  test_classifiers.py  test_config.py  test_coverage_final.py  test_db_engine.py  test_db_repository.py  test_decoders.py  test_deep_coverage.py  test_derived_eeg.py  test_dsp_bandpower.py  test_dsp_classifiers.py  test_ea1_coverage.py  test_ea1_scorer.py  test_ea1_scorer_coverage.py  test_ea1_scorer_parametric.py  test_eeg_pump.py  test_eeg_pump_extended.py  test_exceptions.py  test_fatigue.py  test_fatigue_focus_extended.py  test_filter_toggles.py  (+32 more)
backend/tests/unit/dsp/: test_artifact_config.py  test_artifact_detector.py  test_artifact_gate.py  test_asr.py  test_bad_channels.py  test_bandpower.py  test_baseline.py  test_breathing.py  test_cardiac_regression.py  test_classifiers.py  test_decoders.py  test_derived_eeg.py  test_filter_toggles.py  test_fnirs.py  test_imu.py  test_ocular_regression.py  test_pipeline_branches.py  test_ppg.py  test_settling_flow.py  test_spherical_spline.py  test_stage6_pump_integration.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AlchemicalJournal.tsx  ArtifactBadge.tsx  ArtifactConfigPanel.tsx  ArtifactGuidePanel.tsx  ArtifactStatsPanel.tsx  AudioFeedbackPanel.tsx  BadChannelPanel.tsx  BandPowerChart.tsx  BandTrend.tsx  BaselinePanel.tsx  BreathingPanel.tsx  CalibrationPanel.tsx  ConnectionPanel.tsx  ConnectivityArc.tsx  ContactQuality.tsx  DeviceStatusBar.tsx  EA1Score.tsx  FiltersPage.tsx  FocusFatigueGauge.tsx  HRVCoherenceTrainer.tsx  HRVPanel.tsx  IMUPanel.tsx  ImpedancePanel.tsx  MeditationTimer.tsx  MuseConnectButton.tsx  NeurofeedbackGauge.tsx  PersonalBaseline.tsx  RollingSpectrogram.tsx  SSpaceDisplay.tsx  SessionGoals.tsx  SessionGoalsPanel.tsx  SessionHistoryPanel.tsx  SignalPipelinePanel.tsx  StageJournal.tsx  TopoMap.tsx  WanderingLog.tsx
frontend/src/hooks/: useAlchemicalJournal.ts  useArtifactConfig.ts  useArtifactStats.ts  useAudioFeedback.ts  useBaselineBell.ts  useFilters.ts  useHRVCoherence.ts  useMeditationTimer.ts  useMuseBLE.ts  useNeurolinkSSE.ts  usePersonalBaseline.ts  useSessionGoals.ts  useSessionHistory.ts  useStageJournal.ts  useWanderingDetector.ts
frontend/src/tests/: AlchemicalJournal.test.tsx  App.test.tsx  ArtifactBadge.test.tsx  ArtifactStatsPanel.test.tsx  BadChannelPanel.test.tsx  BandPowerChart.test.tsx  BreathingPanel.test.tsx  CalibrationPanel.test.tsx  ContactQuality.test.tsx  EA1Score.test.tsx  FocusFatigueGauge.test.tsx  HRVPanel.test.tsx  IMUPanel.test.tsx  ImpedancePanel.test.tsx  SSpaceDisplay.test.tsx  SignalPipelinePanel.test.tsx  useAlchemicalJournal.test.ts  useArtifactStats.test.ts  useAudioFeedback.test.ts  useBaselineBell.test.ts  useNeurolinkSSE.test.ts
scripts/: podman-setup.sh  untrack-node-modules.sh
