[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurolink"
version = "1.0.0"
description = "EEG-based meditation and contemplative practice app"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.0,<3",
  "redis[hiredis]>=5.0",
  "aiosqlite>=0.20",
  "sqlalchemy[asyncio]>=2.0,<3",
  "bleak>=0.22,<0.23",
  "pylsl>=1.16",
  "numpy>=1.26,<2",
  "neurokit2>=0.2",
  "scipy>=1.13",
  "structlog>=24.0",
  "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
  "coverage[toml]>=7.0",
  "pytest-cov>=5.0",
  "alembic>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neurolink"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
log_cli = false

[tool.coverage.run]
source = ["neurolink"]
omit = [
  "*/tests/*",
  "*/migrations/*",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.+",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]
ignore = [
  "E501",   # line too long (handled by formatter)
  "N803",   # argument name should be lowercase (acronyms)
  "N806",   # variable in function should be lowercase
  "A001",   # variable shadows builtin (id)
  "A002",   # argument shadows builtin
  "RUF012", # Mutable class attributes
  "B008",   # Do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["neurolink"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true
exclude = ["tests/", "migrations/"]
