[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurolink"
version = "1.0.0"
description = "EEG-based meditation and contemplative practice app"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.0,<3",
  "redis[hiredis]>=5.0",
  "aiosqlite>=0.20",
  "sqlalchemy[asyncio]>=2.0,<3",
  "bleak>=0.22,<0.23",
  "pylsl>=1.16",
  "numpy>=1.26",
  "neurokit2>=0.2",
  "scipy>=1.13",
  "structlog>=24.0",
  "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
  "coverage[toml]>=7.0",
  "pytest-cov>=5.0",
  "alembic>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neurolink"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
log_cli = false

[tool.coverage.run]
# source_pkgs resolves the package by name in sys.modules, so omit globs
# match the editable-install path (/site-packages/neurolink/*) reliably.
source_pkgs = ["neurolink"]
omit = [
  "*/tests/*",
  "*/migrations/*",
  # Infrastructure requiring live services — not unit-testable
  "*/neurolink/main.py",
  "*/neurolink/routers/*",
  "*/neurolink/ble_bridge.py",
  "*/neurolink/hardware/muse_ble*",
  # LSL/BLE adapters require muselsl / OpenMuse running externally
  "*/neurolink/hardware/muse_s/lsl_adapter.py",
  "*/neurolink/hardware/muse_athena/ble_adapter.py",
  "*/neurolink/cache/*",
  "*/neurolink/db/*",
  "*/neurolink/logging_config.py",
  "*/neurolink/dependencies.py",
  # Pure DB re-export — coverage just follows db/* which is already omitted
  "*/neurolink/models/session.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.+",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF", "S"]
ignore = [
  "E501",
  "N803",
  "N806",
  "A001",
  "A002",
  "RUF012",
  "B008",
  # S603/S607 flag subprocess calls with partial paths — too noisy for scripts
  "S603",
  "S607",
]

[tool.ruff.lint.per-file-ignores]
# Tests use assert statements (correct — pytest rewrites them) and
# PascalCase/camelCase method names are conventional in unittest.TestCase
# subclasses.  S101 suppresses the 'assert used' warning in test files only;
# it remains active in src/ so accidental assert-as-validation is caught.
# S110 suppresses try/except/pass in test fixtures and teardown blocks where
# swallowing exceptions is intentional (logging inside teardown would obscure
# the real test failure being reported).
"tests/**" = ["N802", "N803", "S101", "S110"]
# Scripts and one-off tooling don't need strict naming conventions
"scripts/**" = ["N802", "N803", "S101", "S110", "S", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["neurolink"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true
exclude = ["tests/", "migrations/"]
